--- a/docs/POSDE_bookdown.tex
+++ b/docs/POSDE_bookdown.tex
@@ -117,7 +117,7 @@
 
 \title{Applied Philosophy of Science and Data Ethics}
 \author{Dr.~Carlos Vega}
-\date{2021: Last compiled: 2021-11-02}
+\date{2021: Last compiled: 2021-11-03}
 
 \begin{document}
 \maketitle
@@ -1355,7 +1355,7 @@ Observations are often expressed in the form of a rule so that other researchers
 \hypertarget{indicators}{%
 \subsubsection{Indicators}\label{indicators}}
 
-Most facts we know about are indirectly observable, i.e.~we infer them through an intermediary. For instance, the wind is not directly observable but inferred from bodies apparently moved by it. We \emph{objectify} an observable fact by establishing its relationship to some perceptible fact(s) that serve us as an \emph{indicator} of the fact. In other words, hypotheses are made concerning unperceived facts and tested through evidence consisting of data about other directly observable facts, assuming that the latter are \textbf{collaterally connected with} or \textbf{effects} of the former. Of course, that such relationship should hold is as well a hypothesis (see Figure \ref{fig:indicator}).
+Most facts we know about are indirectly observable, i.e.~we infer them through an intermediary. For instance, the wind is not directly observable but inferred from bodies apparently moved by it. We \emph{objectify} an unobservable fact by establishing its relationship to some perceptible fact(s) that serve us as an \emph{indicator} of the fact. In other words, hypotheses are made concerning unperceived facts and tested through evidence consisting of data about other directly observable facts, assuming that the latter are \textbf{collaterally connected with} or \textbf{effects} of the former. Of course, that such relationship should hold is as well a hypothesis (see Figure \ref{fig:indicator}).
 
 
 
